static/css/base.css
/* -- Base CSS -- */

html {
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
}

body {
    width: 100%;
    background-image: url('/media/elaine-howlin-FEpNmWh1fMc-unsplash.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-color: rgb(247, 235, 235);
    height: calc(76vh - 164px);
}

.overlay {
    height: 100%;
    width: 100%;
    background-color: antiquewhite;
    z-index: -1;
    top: 0;
    left: 0;
    position: fixed;
}

div.mainwrapper {
    width: 100%;
    background-color: antiquewhite;
}

.header-container {
    padding-top: 164px;
    width: 100%;
  }

/* ----------------------- Headers and Nav Bars -----------------------  */

.header-container {
    padding-top: 164px;
    width: 100%;
}

header.header-bg {
    background-color: antiquewhite;
}

.offcanvastop {
    z-index: 77777777;
}

div.bannerlogo {
    width: 100%;
}

h2.logo-font {
    font-family: 'Dancing Script', serif;
    font-weight: 700;
    font-size: 3em;
}

a.nav-link {
    font-family: 'Petrona', serif;
    font-weight: 700;
}

div.free-shipping {
    z-index: 9000;
    font-family: 'Arbutus Slab', serif;
    font-weight: 400;
}

/* ----------------------- Image CSS ----------------------- */

.imgcontainer {
    padding-left: 90px;
}

div#testimonialimage1 {
    background-image: url('/media/indeximagery.jpg');
    background-size: cover;
    background-color: brown;
    height: 200px;
    background-position-x: center;
    width: 200px;
    background-position-y: bottom;
    border-radius: 50%;
}

div#testimonialimage2 {
    background-image: url('/media/indeximagery.jpg');
    background-size: cover;
    background-color: brown;
    height: 200px;
    background-position-x: center;
    width: 200px;
    background-position-y: bottom;
    border-radius: 50%;
}

div#testimonialimage3 {
    background-image: url('/media/indeximagery.jpg');
    background-size: cover;
    background-color: brown;
    height: 200px;
    background-position-x: center;
    width: 200px;
    background-position-y: bottom;
    border-radius: 50%;
}

div#indexhandpicked {
    background-image: url('/media/handpicked.jpg');
    background-size: cover;
    background-color: brown;
    height: 300px;
    background-position-x: center;
    width: 400px;
    background-position-y: center;
}

div#indexwho {
    background-image: url('/media/indeximagery.jpg');
    background-size: cover;
    background-color: brown;
    height: 300px;
    background-position-x: center;
    width: 400px;
    background-position-y: bottom;
}

img.card-img-top {
    width: 100%;
    height: 15vw;
    object-fit: cover;
}

div.productcards {
    width: 20rem;
}

/* ----------------------- Toast CSS ----------------------- */

.toast-body {
    z-index: 999999;
    border-radius: 5px;
    background-color: #fff;
    color: #000;
    margin-top: 10px;
    margin-right: 10px;
    width: 400px;
}

/* ----------------------- Icons and Text ----------------------- */

.quant-form {
    padding-left: 40px;
}

div.indexintros {
padding: 30px;
}

.page-text {
    font-family: 'Arbutus Slab', serif;
    font-weight: 400;
}

p.page-text {
    margin-top: 60px;
    margin-bottom: 1rem;
}

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

button.wishicon {
    border: none;
    background-color: transparent;
    color: rgb(99, 87, 100);
}

/* ----------------------- Buttons ----------------------- */

.btn-black {
background: rgb(99, 87, 100);
color: white;
}

/* ----------------------- Allauth form formatting ----------------------- */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: #6c757d; 
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* Standard bootstrap btn transitions */
    transition: color .15s ease-in-out, background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}


/* ----------------------- Widgets ----------------------- */
.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    min-width: 100%;
    min-height: 100%;   
    top: 0;
    right: 0;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 2px;
    border-color: red;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: red;
    border-color: red;
    border-radius: 2px;
}

/* ----------------------- Media Queries ----------------------- */

/* ----------------------- Slightly larger container on XL screens ----------------------- */
@media (min-width: 768px) {
    .container {
      width: 100%;
    }
  }
  
/* ----------------------- Fixed top navbar only on medium screens and upwards ----------------------- */

@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }
  
    .header-container {
      padding-top: 164px;
    }
  }
  
  /* ----------------------- Pad the top when navbar is collapsed on mobile ----------------------- */


@media (max-width: 768px) {
    div.product-container {
        margin-top: 130px;
    }
}

@media screen and (min-width: 768px) and (max-width: 1755px) {
    html {
        width: 100%;
    }
    body {
        width: 100%;
    }
    div.container {
        width: 100%;
    }
}



/* 768px to 1755px is where it starts going wonky */


/* Unorganised CSS */

a.update-link,
a.remove-item {
    cursor: pointer;
}

.cart-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

@media screen and (max-width: 400px) {
    div.free-shipping {
        font-size: 13px;
        margin-left: 10px;
        padding-top: 12px;
    }
}

button.navbar-toggler {
    z-index: 2222;
}

p.page-text {
    font-weight: 700;
    font-size: 26px;
    letter-spacing: 1px;
    font-family: 'Petrona', serif;
    color: #000000;
}

div.bannerlogo::after {
  background-color: antiquewhite;
  content: "";
  opacity: 0.5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;   
}

a.clickerbtn {
    text-decoration: none;
}

p.testimonial-text {
    padding: 0 20px;

}

div.card,
div.card-footer {
    background-color: transparent;
    border: none;
}

p.product-name {
    font-weight: 500;
    font-size: 14px;
    font-family: "Arbutus Slab", serif;
}

div.card-body {
    margin-bottom: 0;
}

a.text-muted {
    text-decoration: none;
}

p.lead {
    font-size: 13px;
    font-weight: 500;
    font-family: "Arbutus Slab", serif;
}

p.page-handpicked-text {
    font-size: 0.9em;
}

@media screen and (min-width: 768px) and (max-width: 992px) {
    div.header-container {
        margin-bottom: -30px;
    }
}

@media screen and (min-width: 320px) and (max-width: 767px) {
    div.header-container {
        margin-bottom: -100px;
    }
}

@media screen and (max-width: 768px) {
    div.heading-text {
        padding-top: 80px;

    }
}

@media screen and (min-width: 769px) {
    div.clickformore {
        margin-top: 300px;
    }
}

